pod-dharvik.yml
apiVersion: v1
kind: Pod
metadata:
  name: dharvik-pod1
  labels: 
    papa: vijendra
spec: 
  containers: 
    # - name: nginx
    #   image: nginx
    #   ports: 80
    - name: netflix
      image: nginx:latest
      ports: 
        - containerPort: 80
    - name: firefox
      image: linuxserver/firefox
      ports: 
        - containerPort: 3000
